[gd_scene load_steps=14 format=3 uid="uid://blkuyflhl23b7"]

[ext_resource type="Script" path="res://src/Components/nextlevel/NextLevel.gd" id="1_t1pfa"]
[ext_resource type="Texture2D" uid="uid://bh7rtvgbo7d0y" path="res://assets/UXUI/Panel.png" id="2_1spjf"]
[ext_resource type="Texture2D" uid="uid://7joyvq4pe5yr" path="res://assets/UXUI/New Project.png" id="2_5kb4s"]
[ext_resource type="Texture2D" uid="uid://ckys5q38v25su" path="res://assets/UXUI/Icons/LockIcon.png" id="2_brfc3"]
[ext_resource type="Texture2D" uid="uid://d127df5p3cmfy" path="res://assets/UXUI/Icons/WARNING.png" id="3_qoyat"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_81yw7"]
height = 0.348757

[sub_resource type="BoxShape3D" id="BoxShape3D_fqfgr"]
size = Vector3(1.55061, 0.34574, 1.61938)

[sub_resource type="CylinderMesh" id="CylinderMesh_ae87p"]

[sub_resource type="ViewportTexture" id="ViewportTexture_vh80m"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hjc83"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_vh80m")

[sub_resource type="PlaneMesh" id="PlaneMesh_algmu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p8vx4"]
texture = ExtResource("2_1spjf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n6i1f"]
texture = ExtResource("2_5kb4s")

[node name="NextLevel" type="StaticBody3D"]
transform = Transform3D(0.73038, 0.25, -0.635646, -0.00623601, 0.933013, 0.359789, 0.683013, -0.258819, 0.683013, -0.25055, 0, 0.114918)
script = ExtResource("1_t1pfa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.998863, 0.0456529, -0.013725, -0.0472167, 0.907768, -0.416806, -0.00656942, 0.41698, 0.908892, 0.0993067, 0.0897674, -0.231065)
shape = SubResource("CylinderShape3D_81yw7")
disabled = true

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(0.999264, -0.018707, 0.0334884, 0.0294952, 0.932868, -0.35901, -0.024524, 0.359733, 0.932733, 0.107572, 0.0915906, -0.23565)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_fqfgr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.999264, -0.00335599, 0.0334884, 0.0294952, 0.167354, -0.35901, -0.024524, 0.0645351, 0.932733, 0.0979254, 0.0920244, -0.236942)
mesh = SubResource("CylinderMesh_ae87p")

[node name="GUI" type="MeshInstance3D" parent="."]
transform = Transform3D(0.673788, 0, 0, 0, 0.0119464, -0.587174, 0, 1.00506, 0.00697931, 0, 1.09893, 0)
material_override = SubResource("StandardMaterial3D_hjc83")
mesh = SubResource("PlaneMesh_algmu")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Panel" type="Panel" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_p8vx4")

[node name="Panel" type="Panel" parent="SubViewport/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.059
anchor_right = 0.783
anchor_bottom = 0.559
offset_left = 47.104
offset_top = 33.792
offset_right = 47.1039
offset_bottom = 33.792
theme_override_styles/panel = SubResource("StyleBoxTexture_n6i1f")

[node name="CenterContainer" type="CenterContainer" parent="SubViewport/Panel/Panel"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 256.0

[node name="LockIcon" type="TextureRect" parent="SubViewport/Panel/Panel/CenterContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_brfc3")

[node name="LockIcon2" type="TextureRect" parent="SubViewport/Panel/Panel/CenterContainer"]
layout_mode = 2
texture = ExtResource("3_qoyat")

[node name="Label" type="Label" parent="SubViewport/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 0.875
offset_top = -64.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 100
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
