[gd_scene load_steps=7 format=3 uid="uid://w4infiu0xuyv"]

[ext_resource type="Script" path="res://src/Components/nextlevel/NextLevel.gd" id="1_eaqvr"]

[sub_resource type="BoxMesh" id="BoxMesh_5scx8"]

[sub_resource type="SphereMesh" id="SphereMesh_ybvjf"]

[sub_resource type="Curve" id="Curve_7446d"]
_data = [Vector2(0, 0.536842), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.79812, 0.0, 0, 0]
point_count = 2

[sub_resource type="CylinderMesh" id="CylinderMesh_6cute"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yfvl4"]
size = Vector3(1, 1, 2.0613)

[node name="FoodTruck" type="CharacterBody3D" groups=["FoodTruck"]]
script = ExtResource("1_eaqvr")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.56061, 0, 0, 0.269733)
mesh = SubResource("BoxMesh_5scx8")

[node name="GPUParticles3D" type="CPUParticles3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.348694, -0.615577)
emitting = false
amount = 3
mesh = SubResource("SphereMesh_ybvjf")
gravity = Vector3(0, 0, 0)
scale_amount_curve = SubResource("Curve_7446d")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 0.522879, 0, 0, 0, 0.334428, 0, -0.220823, 0.66757)
mesh = SubResource("BoxMesh_5scx8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-1.27529e-08, -0.0680274, 1.83588e-08, 0, -2.97357e-09, -0.42, 0.291752, -2.97357e-09, 8.02488e-16, 0.470069, -0.422334, 0.362946)
mesh = SubResource("CylinderMesh_6cute")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-1.27529e-08, -0.0680274, 1.83588e-08, 0, -2.97357e-09, -0.42, 0.291752, -2.97357e-09, 8.02488e-16, 0.470069, -0.422334, -0.282966)
mesh = SubResource("CylinderMesh_6cute")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-1.27529e-08, -0.0680274, 1.83588e-08, 0, -2.97357e-09, -0.42, 0.291752, -2.97357e-09, 8.02488e-16, -0.466714, -0.422334, 0.362946)
mesh = SubResource("CylinderMesh_6cute")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-1.27529e-08, -0.0680274, 1.83588e-08, 0, -2.97357e-09, -0.42, 0.291752, -2.97357e-09, 8.02488e-16, -0.466714, -0.422334, -0.282966)
mesh = SubResource("CylinderMesh_6cute")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.518196)
shape = SubResource("BoxShape3D_yfvl4")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.698253, 0.715851, 0, -0.715851, 0.698253, 0, 8.48261, 7.49102)
